--- a/app/src/main/res/layout-land/item_movie.xml
+++ b/app/src/main/res/layout-land/item_movie.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="5dp"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="10dp">
 
@@ -27,22 +27,15 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="15dp">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardView"
-                android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/ivPoster"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                app:cardBackgroundColor="?attr/colorAccent"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="0dp">
-
-                <ImageView
-                    android:id="@+id/tvPoster"
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    tools:srcCompat="@tools:sample/avatars" />
-            </androidx.cardview.widget.CardView>
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                tools:srcCompat="@tools:sample/avatars" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvTitle"
@@ -51,9 +44,9 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
-                android:layout_toEndOf="@+id/cardView"
+                android:layout_toEndOf="@+id/ivPoster"
                 android:fontFamily="sans-serif-condensed-medium"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textSize="24sp"
@@ -61,15 +54,15 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvOverview"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvTitle"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="15dp"
-                android:layout_toEndOf="@+id/cardView"
+                android:layout_toEndOf="@+id/ivPoster"
                 android:textSize="12sp"
                 tools:text="Peter Parker is unmasked and no longer able to separate his normal life from the high-stakes of being a super-hero. When he asks for help from Doctor Strange the stakes become even more dangerous, forcing him to discover what it truly means to be Spider-Man." />
         </RelativeLayout>
