--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,10 +2,10 @@
     <!-- Base application theme. -->
     <style name="Theme.Flixster" parent="Theme.Material3.DayNight">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimary">@color/material_dynamic_neutral95</item>
         <item name="colorAccent">@color/material_dynamic_neutral95</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/material_dynamic_neutral99</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
 </resources>
